--- a/style.css
+++ b/style.css
@@ -1,1 +1,4 @@
-
+body{
+  background-image: "https://img.freepik.com/free-vector/realistic-christmas-background-with-baubles-branches_79603-2224.jpg";
+  opacity:0.5;
+}
